--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "eigendecomposer"
 version = "1.1.0a0"
-description = "A Python script for eigenvalue decomposition and visualization"
+description = "A Python app for eigenvalue decomposition and visualization"
 authors = ["elahpeca <acephaleee@gmail.com>"]
 
 [tool.poetry.dependencies]
