--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 numpy = "^1.24.2"
 matplotlib = "^3.7.1"
 seaborn = "^0.12.2"
+PyGObject = "^3.42.0"
 
 [tool.poetry.scripts]
 eigendecomposer = "eigendecomposer.main:main"
